# cli-market-world

./: .commitmsg  .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CNAME  CONTRIBUTING.md  Dockerfile  Dockerfile.collector  PLAYWRIGHT_FALLBACK_GUIDE.md  PRICE_INTEL_PLAN.md  Procfile  README.md  RESUME_railway_cleanup.md  VALIDATION_PLAN.md  __next.__PAGE__.txt  __next._tree.txt  _config.yml  _gen_intelliprice.py  _gen_priceintel.py  _gen_procure.py  _not-found.html  _rebuild_intelliprice.py  account_service.py  audit_funnel.py  backend_interface.py  case-studies.md  category_confidence.py  cloudflare-pages.json  collect_prices.py  collector_schema.py  coverage_matrix.py  dashboard_glossary.py  dashboard_quality.py  dashboard_render.py  dashboard_renderer.py  dashboard_semantic.py  dashboard_view_model.py  data_v1_service.py  (+91 more)
.cursor/: environment.json  mcp.json
.github/: dependabot.yml
.next/: trace  trace-build
.obsidian/: app.json  appearance.json  core-plugins.json  graph.json  templates.json
_not-found/: __next._full.txt  __next._head.txt  __next._index.txt  __next._not-found.__PAGE__.txt  __next._not-found.txt  __next._tree.txt
academy-site/: PROPUESTA_LANDING.md  _headers  index.html
agentic_market.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
cli_market.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cli_market_world.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docker/: DOCKER_SETUP.md  Dockerfile.monitor  Dockerfile.server  docker-compose.complete.yml  docker-compose.hotel.yml  docker-compose.prod.yml  docker-compose.yml  init-db.sql  market-api-wrapper.sh  market-monitor.py  market-scheduler.sh
docs/: Aquí están los tres entregables com.txt  BRAND.md  CONTENT.md  DATA-MOAT-INDICATORS.md  GTM-Hub.md  LANGCHAIN-INTEGRATION.md  MISTRAL-INTEGRATION.md  OPENWEBUI-INTEGRATION.md  PYPI-PACKAGE-MODEL.md  README.md  STRATEGY.md  Super agente para optimización de cli.docx  TROUBLESHOOTING-MCP.md  aeo-citation-baseline.md  alpha-gates-2026-06-01.md  api-perf-baseline.md  cli-market-prd-v2.md  content-strategy.md  dashboard-content-spec.md  dashboard-redesign.md  data-moat-reporting.md  data-moat-strategy.md  demo-walkthrough.md  dx-audit.md  growth-channels.md  linkedin-calendar.md  methodology-brand-intelligence.md  methodology.md  obsidian-vault.md  outbound-sequences.md  outreach-brand-intelligence.md  plan-procure-mercadopago-subscribe.md  prd-brand-intelligence-v1.md  prd-intelligence-v2-methodology.md  prd-investigate-mission-control-v0.md  prd-landing-icp-hub.md  prd-landing-spoke-design-system.md  prd-market-intel-data-integrity.md  prd-observatory-p0.md  prd-procure-checkout-latam.md  (+6 more)
functions/: _middleware.js
interface1/: package.json  pnpm-lock.yaml
landing/: .env.example  .gitignore  .npmrc  DESIGN-SPOKE.md  QA-SPOKE-E.md  README.md  next-sitemap.config.js  next.config.ts  package-lock.json  package.json  tsconfig.json  vercel.json
legal/: AUP.md  Data_License_Agreement.md  Privacy.md  SLA.md  ToS.md
market_connectors/: __init__.py  base.py  email_outbound.py  lemon_payments.py  magento.py  minimax.py  paypal_payments.py  shopify.py  sunat_invoicing.py  vtex.py  wise_payments.py
market_core/: __init__.py  dashboard_view_model.py  data_v1_service.py  market_alerts.py  market_basket.py  market_billing.py  market_core.py  market_db.py  market_enrich_sources.py  market_enrich_subcategory.py  market_health_alert.py  market_indicators.py  market_intel_agent.py  market_mcp.py  market_security.py  market_spread.py  market_stats.py  market_stores.py  retailer_onboarding.py  source_health.py  store_credentials.py
ops/: BILLING_MANUAL.md  CLIENT_PAYMENT_JOURNEY.md  COMMAND_CONTROL.md  DEPENDABOT-NPM.md  DEPLOYMENT_MONITORING_DAILY_COMMANDS.md  E2E_CLIENT_JOURNEY.md  GITHUB_ACTIONS_SECRETS.md  HN_POST.md  MCP_SUBMISSION.md  OBSERVATORY-CHANGE-CHECKLIST.md  ONBOARDING_MAP.md  PAM.md  PAYPAL_SANDBOX.md  PRICING-CHANGE-CHECKLIST.md  PYPI_RELEASE.md  RAILWAY_DEPLOY.md  RELEASE-DISPERSION.md  RESUME_taller_registro_2026-07-16.md  ROTATION_MANUAL.md  SECRETS_INVENTORY.md  SECURITY_INCIDENT-2026-06-12-pro-activation.md  SPRINT-N1-PAYMENTS-SPLIT.md  STAGING_SETUP.md  TECH-DEBT-BACKLOG.md  _activate_pro_railway.py  _check_db.py  _check_paid_subs.py  _check_paypal_plan_price.py  _test_collector_startup.py  activate_outbound_target.py  activate_pro.py  activate_procure.py  adoption_index.py  after_core_1.11.0_published.sh  after_core_1.9.34_published.sh  after_core_1.9.35_published.sh  after_core_1.9.36_published.sh  agent_receipt.sh  approve_retailer.py  audit_mobile_home.py  (+135 more)
retailers/: __next._full.txt  __next._head.txt  __next._tree.txt  __next.retailers.__PAGE__.txt
routers/: __init__.py  academy.py  admin.py  agent.py  alerts.py  analytics.py  auth.py  brand_intel.py  cart.py  dashboard.py  dashboard_html.py  data_export.py  data_v1.py  discovery.py  funnel.py  health.py  index_api.py  intel.py  intelligence_web.py  mcp_http.py  media.py  misc.py  observatory.py  orders.py  payments.py  public_demo.py  retailer_admin.py  retailers.py  search.py  slack_ops.py  taller.py  vault.py
tests/: conftest.py  test_academy_waitlist.py  test_activation_summary.py  test_admin.py  test_adoption.py  test_adoption_index.py  test_adoption_recent.py  test_alerts_notify_email.py  test_analytics.py  test_api_perf.py  test_audit.py  test_auth.py  test_auth_refresh.py  test_auth_register.py  test_backend_ci_template.py  test_basket_category.py  test_basket_compare_parallel.py  test_billing_slack.py  test_brand_intel.py  test_canasta_ar_parsing.py  test_canonical_copy.py  test_cart.py  test_ceo_metrics_report.py  test_checkout_payments.py  test_cli_account_commands.py  test_cli_activation.py  test_cli_affordability.py  test_cli_ask.py  test_cli_cart_clear.py  test_cli_catalog_commands.py  test_cli_categories_disclaimer.py  test_cli_compare_unit_price.py  test_cli_doctor_health.py  test_cli_install.py  test_cli_intel_advanced_commands.py  test_cli_intel_country_ux.py  test_cli_investigate.py  (+91 more)
(+605 files in other folders)
