[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-market"
version = "1.8.0"
description = "mcp-name: io.github.Treevu-ai/cli-market-world - CLI Market: commerce API for AI agents. 43 MCP tools, 34 indicators, 36 verified retailers in 8 countries. MIT."
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "CLI Market", email = "hello@cli-market.dev"}]
keywords = ["vtex", "mcp", "ai-agents", "ecommerce", "cli", "retail", "commerce", "infrastructure"]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
# The data-moat modules now live in cli-market-core; it carries the transitive
# runtime deps (httpx, rich, fastapi, uvicorn, pydantic, asyncpg, psycopg2, …).
# NOTE: PyPI rejects direct git URLs in dependencies, so the exact commit pin
# lives in requirements-railway.txt for the deploy; here we use a version range.
dependencies = [
    "cli-market-core>=0.1.0",
]

[project.optional-dependencies]
playwright = ["playwright>=1.45.0"]

[project.scripts]
market = "market_cli:main"
market-server = "market_server:main"

[tool.setuptools]
py-modules = ["market_cli", "market_server", "market_security", "server_deps", "collect_prices", "backend_interface"]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = [
    "landing/",
    ".market/",
    "dist/",
    "build/",
    "*.egg-info/",
    "docs/financial-services/",
]

[tool.ruff.lint]
# Focused on correctness, not style. Add rule families incrementally as the
# codebase matures. Current scope:
#   F   = pyflakes      (unused imports, undefined names, redefinitions)
#   E9  = pycodestyle   (real syntax errors, IndentationError, etc.)
#   W6  = pycodestyle   (deprecation warnings)
#   B   = bugbear       (mutable default args, except-pass, etc.)
select = ["F", "E9", "W6", "B"]
ignore = [
    "B008",   # FastAPI uses function calls in defaults (Header(None), Body(...))
    "B904",   # raise from inside except — common pattern here, not always wrong
]

[tool.ruff.lint.per-file-ignores]
# Tests intentionally import market_core after env setup — the E402 rule
# would force module-level imports to be reordered, breaking the test isolation.
"tests/*" = ["E402", "F401"]
