[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-market-world"
version = "1.9.42"
description = "mcp-name: io.github.Treevu-ai/cli-market-world - CLI Market: commerce API for AI agents. 24 curated MCP tools (46 legacy), 44 indicators, 38 verified retailers in 8 countries. MIT."
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "CLI Market", email = "hello@cli-market.dev"}]
keywords = ["vtex", "mcp", "ai-agents", "ecommerce", "cli", "retail", "commerce", "infrastructure"]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
# Intelligence layer ships separately on PyPI as cli-market-core.
dependencies = [
    "cli-market-core>=1.9.40",
    "httpx>=0.27",
    "rich>=13.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.0",
    "python-multipart>=0.0.9",
    "psycopg2-binary>=2.9",
    "asyncpg>=0.29",
    "playwright>=1.45.0",
]

[project.urls]
Homepage = "https://cli-market.dev"
Documentation = "https://cli-market.dev/docs"
"MCP Tools" = "https://cli-market.dev/tools"
Stats = "https://cli-market.dev/stats"
"API Reference" = "https://cli-market-production.up.railway.app/docs"
Support = "https://cli-market.dev/docs"

[project.optional-dependencies]
playwright = ["playwright>=1.45.0"]

[project.scripts]
market = "market_cli:main"
market-server = "market_server:main"
market-mcp = "market_mcp:main"

[tool.setuptools]
py-modules = [
    "market_cli", "market_ui", "account_service", "procure_billing", "market_funnel", "market_adoption", "market_observatory", "market_agent_id", "market_pepy", "market_golive", "market_server", "market_security", "server_deps", "collect_prices", "backend_interface", "index_gate", "price_snapshots_schema", "market_cli_i18n",
]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = [
    "landing/",
    ".market/",
    "dist/",
    "build/",
    "*.egg-info/",
    "docs/financial-services/",
]

[tool.ruff.lint]
select = ["F", "E9", "W6", "B"]
ignore = [
    "B008",
    "B904",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402", "F401"]